vue build to github pages

--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "calorie-counter",
   "version": "0.0.0",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "gh-pages-deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
