--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
+    "bootstrap-icons": "^1.10.3",
     "bootstrap-vue": "^2.23.1",
     "execa": "latest",
     "vue": "^3.2.47",
