--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "calorie-counter",
   "version": "0.0.0",
   "private": true,
+  "homepage": ".",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "gh-deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "axios": "^1.3.4",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
@@ -20,11 +24,9 @@
     "@vitejs/plugin-vue": "^4.0.0",
     "@volar-plugins/vetur": "latest",
     "@vue/eslint-config-prettier": "^7.1.0",
-    "bootstrap": "^5.3.0-alpha1",
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
-    "jquery": "^3.6.3",
-    "popper.js": "^1.16.1",
+    "execa": "latest",
     "prettier": "^2.8.4",
     "vite": "^4.1.4"
   }
