--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
