--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "bootstrap-vue": "^2.23.1",
     "vue": "^3.2.47",
     "xlsx": "^0.18.5"
   },
