--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.10.3",
     "bootstrap-vue": "^2.23.1",
     "vue": "^3.2.47",
+    "vue3-popper": "^1.5.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
