--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "bootstrap-vue": "^2.23.1",
+    "js-file-download": "^0.4.12",
     "vue": "^3.2.47",
     "vue3-popper": "^1.5.0",
     "xlsx": "^0.18.5"
