https in production

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 CALORIE_APP_KEY="DEMO_KEY"
-VITE_BACKEND="http://kaloriaszamlalo.azurewebsites.net"
+VITE_BACKEND="https://kaloriaszamlalo.azurewebsites.net"
